additional work to the fork

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <ul>
   <li routerLink="Add">Add A New Item</li>
   <li routerLink="Display">Display Shopping List</li>
+  <li routerLink="add-category">Create a Category</li>
+  <li routerLink="categories">View Categories</li>
 
 </ul>
 </nav>
