--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .navbar {
   display:inline-block;
   padding: 20px;
-  height: 100px;
+  /* height: 100px; */
  width: 100%;
  background-color: #028476;
  color: aquamarine;
