--- a/src/app/shopping-add/shopping-add.component.html
+++ b/src/app/shopping-add/shopping-add.component.html
@@ -17,10 +17,9 @@
 
       <label for="">Category</label>
       <select name="" id="" formControlName="category">
-        <option value="Fruit">Fruit</option>
-        <option value="Dairy">Dairy</option>
-        <option value="Vegetable">Vegetable</option>
-        <option value="Staple">Staple</option>
+        <option *ngFor="let group of categories" value="{{group.category_name}}">
+          {{group.category_name}}
+        </option>
       </select>
 
       <label for="">Price</label>
